[package]
name = "lore"
version = "0.1.0"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "5.0.4"
lalrpop-util = "0.17.2"
regex = "1.3.1"
yansi = "0.5.0"
joinery = "2.0.0"

[build-dependencies]
lalrpop = "0.17.2"
